Fix OPENDJ-64 - Exception and stacktrace while running dsreplication
The "approx-older-change-not-synchronized-millis" monitor attribute is optional, so we should avoid throwing unnecessary exceptions.